# can-hal-rs

./: AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml  hardware-test.yml
can-hal/: Cargo.toml  README.md
can-hal-isotp/: Cargo.toml  README.md
can-hal-isotp/src/: channel.rs  config.rs  error.rs  lib.rs
can-hal-kvaser/: Cargo.toml  README.md
can-hal-kvaser/src/: channel.rs  convert.rs  driver.rs  error.rs  event.rs  ffi.rs  lib.rs  mode.rs
can-hal-pcan/: Cargo.toml  README.md
can-hal-pcan/src/: channel.rs  convert.rs  driver.rs  error.rs  event.rs  ffi.rs  lib.rs  library.rs  mode.rs
can-hal-socketcan/: Cargo.toml  README.md
can-hal-socketcan/src/: channel.rs  convert.rs  driver.rs  error.rs  lib.rs
can-hal/src/: async_channel.rs  bus.rs  channel.rs  driver.rs  error.rs  filter.rs  frame.rs  id.rs  lib.rs  timing.rs
examples/can-hal-isotp/: Cargo.toml
examples/can-hal-isotp/examples/: cross_adapter.rs  cross_adapter_fd.rs  functional_addressing.rs  isotp_receive.rs  isotp_send.rs
examples/can-hal-kvaser/: Cargo.toml
examples/can-hal-kvaser/examples/: kvaser_receive.rs  kvaser_receive_fd.rs  kvaser_send.rs  kvaser_send_fd.rs
examples/can-hal-pcan/: Cargo.toml
examples/can-hal-pcan/examples/: bus_status.rs  pcan_receive.rs  pcan_receive_fd.rs  pcan_send.rs  pcan_send_fd.rs  receive.rs  send.rs
examples/can-hal-socketcan/: Cargo.toml
examples/can-hal-socketcan/examples/: filter.rs  receive.rs  send.rs  socketcan_receive.rs  socketcan_send.rs
hardware-tests/: Cargo.toml
hardware-tests/tests/: cross_adapter.rs  cross_adapter_fd.rs  cross_adapter_init.rs  cross_adapter_timing.rs  socketcan_vcan.rs
