[package]
name = "can-hal-kvaser"
version = "0.3.4"
edition = "2021"
rust-version = "1.81"
description = "KVASER CANlib backend for can-hal-rs traits (Windows and Linux)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/can-hal-rs-contributors/can-hal-rs"
keywords = ["can", "can-bus", "kvaser", "canlib", "canfd"]
categories = ["hardware-support"]

[lints]
workspace = true

[dependencies]
can-hal = { version = "0.3.4", path = "../can-hal", package = "can-hal-rs" }
libloading = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }
