[package]
name = "can-hal-pcan"
version = "0.3.1"
edition = "2021"
rust-version = "1.81"
description = "PCAN-Basic backend for can-hal-rs traits (Windows and Linux)"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Dolphindalt/can-hal-rs"
keywords = ["can", "can-bus", "pcan", "peak", "canfd"]
categories = ["hardware-support"]

[dependencies]
can-hal = { version = "0.3.1", path = "../can-hal", package = "can-hal-rs" }
libloading = "0.8"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
