[package]
name = "can-hal-socketcan"
version = "0.1.0"
edition = "2021"
description = "SocketCAN backend for can-hal traits (Linux)"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["can", "can-bus", "socketcan", "canfd", "linux"]
categories = ["hardware-support", "os::linux-apis"]

[dependencies]
can-hal = { path = "../can-hal" }
socketcan = "3.5"
