[package]
name = "can-hal-rs"
version = "0.3.1"
edition = "2021"
rust-version = "1.81"
description = "Hardware-agnostic traits for CAN bus communication"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Dolphindalt/can-hal-rs"
keywords = ["can", "can-bus", "hal", "canfd", "automotive"]
categories = ["hardware-support", "embedded", "no-std"]

[lib]
name = "can_hal"

[features]
default = ["std"]
std = []
async = []

[dependencies]
