[package]
name = "can-hal-isotp-examples"
version = "0.3.0"
edition = "2021"
publish = false

[[example]]
name = "loopback"

[[example]]
name = "isotp_send"

[[example]]
name = "isotp_receive"

[[example]]
name = "kernel_interop"

[[example]]
name = "extended_addressing"

[[example]]
name = "functional_addressing"

[[example]]
name = "loopback_fd"

[[example]]
name = "cross_adapter"

[[example]]
name = "cross_adapter_fd"

[dependencies]
can-hal-isotp = { path = "../../can-hal-isotp" }
can-hal-socketcan = { path = "../../can-hal-socketcan" }
can-hal-pcan = { path = "../../can-hal-pcan" }
can-hal-kvaser = { path = "../../can-hal-kvaser" }
can-hal = { path = "../../can-hal", package = "can-hal-rs" }

[dev-dependencies]
libc = "0.2"
